--- a/Myself.html
+++ b/Myself.html
@@ -1,8 +1,9 @@
-<html>
-<head>
-<title> MY life MY choice </title>
-</head>
-<body> 
-My life My choice -This is what I believe: nobody else has the right to decide how I should live my life. And I don’t want someone else to decide my life.
+<html> 
+<head><title> My life My choice </title></head>
+<body bgcolor = "red" topmargin = "100"" leftmargin = "100" >
+<p align = "center"> My Life My Choice </p>
+<p align = "center"> My life decisions should be taken only by me and no one has the right over it. </p>
+<p align = "center" > <b> NOT EVEN MY PARENTS </b> </p>
 </body>
 </html>
+
